--- a/notebooks/computer_vision.ipynb
+++ b/notebooks/computer_vision.ipynb
@@ -74,18 +74,115 @@
    ],
    "source": [
     "# Check if your camera is working (ignore deprecation warning)\n",
-    "!python3 -c \"import cv2; cap = cv2.VideoCapture(0); print(cap.isOpened())\"\n",
+    "!python3 -c \"import cv2; cap = cv2.VideoCapture(1); print(cap.isOpened()); cap.release()\"\n",
+    "\n",
     "# If True, proceed. If not, try:\n",
     "# 1. run !system_profiler SPCameraDataType to list existing cameras\n",
     "# 2. Go to system preferences -> privacy & security -> camera -> check if your IDE has access to camera\n",
-    "# FYI: cv.VideoCapture(0) doesn't need a proxy like Photobooth. It takes images straight from your camera."
+    "# 3. Try play around with the indexes e.g., cv2.VideoCapture(0)\n",
+    "# FYI: cv.VideoCapture(1) doesn't need a proxy like Photobooth. It takes images straight from your camera."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OpenCV version: 4.11.0\n",
+      "OS: Darwin 23.6.0\n",
+      "Available cameras:\n",
+      " Camera:\n",
+      "\n",
+      "    FaceTime HD Camera:\n",
+      "\n",
+      "      Model ID: FaceTime HD Camera\n",
+      "      Unique ID: 3F45E80A-0176-46F7-B185-BB9E2C0E82E3\n",
+      "\n",
+      "    iPhone (2) Camera:\n",
+      "\n",
+      "      Model ID: iPhone15,4\n",
+      "      Unique ID: 38183445-CB3B-41DE-B949-417000000001\n",
+      "\n",
+      "\n",
+      "\n",
+      "Trying camera index: 0\n",
+      "\n",
+      "Trying camera index: 1\n",
+      "Success with camera 1\n",
+      "Frame stats - min: 0, max: 255, mean: 125.90424012988683\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Only use this code if you want to check which camera index works\n",
+    "import cv2\n",
+    "import time\n",
+    "import platform\n",
+    "\n",
+    "def print_camera_info():\n",
+    "    # List all available cameras on macOS\n",
+    "    import subprocess\n",
+    "    result = subprocess.run(['system_profiler', 'SPCameraDataType'], capture_output=True, text=True)\n",
+    "    print(\"Available cameras:\\n\", result.stdout)\n",
+    "\n",
+    "try:\n",
+    "    print(f\"OpenCV version: {cv2.__version__}\")\n",
+    "    print(f\"OS: {platform.system()} {platform.release()}\")\n",
+    "    print_camera_info()\n",
+    "    \n",
+    "    # Try both built-in and external camera indices\n",
+    "    for camera_index in [0, 1, -1]:\n",
+    "        print(f\"\\nTrying camera index: {camera_index}\")\n",
+    "        cap = cv2.VideoCapture(camera_index)\n",
+    "        \n",
+    "        if cap.isOpened():\n",
+    "            # Set camera properties before reading\n",
+    "            cap.set(cv2.CAP_PROP_CONVERT_RGB, 1.0)\n",
+    "            cap.set(cv2.CAP_PROP_FOURCC, cv2.VideoWriter_fourcc('M','J','P','G'))\n",
+    "            \n",
+    "            time.sleep(2)  # Warm up\n",
+    "            \n",
+    "            ret, frame = cap.read()\n",
+    "            if ret and frame is not None:\n",
+    "                print(f\"Success with camera {camera_index}\")\n",
+    "                print(f\"Frame stats - min: {frame.min()}, max: {frame.max()}, mean: {frame.mean()}\")\n",
+    "                break\n",
+    "        cap.release()\n",
+    "    \n",
+    "finally:\n",
+    "    if 'cap' in locals():\n",
+    "        cap.release()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-01-30 09:14:25,749 - INFO - Camera is opened: True\n",
+      "2025-01-30 09:14:25,750 - INFO - Frame Width: 1920.0\n",
+      "2025-01-30 09:14:25,751 - INFO - Frame Height: 1080.0\n",
+      "2025-01-30 09:14:25,751 - INFO - FPS: 15.0\n",
+      "2025-01-30 09:14:28,784 - INFO - Frame captured: True on attempt 1\n",
+      "2025-01-30 09:14:28,785 - INFO - Frame shape: (1080, 1920, 3)\n",
+      "2025-01-30 09:14:28,788 - INFO - Frame min value: 0\n",
+      "2025-01-30 09:14:28,789 - INFO - Frame max value: 255\n",
+      "2025-01-30 09:14:28,796 - INFO - Frame mean value: 115.30855725951646\n",
+      "2025-01-30 09:14:28,808 - INFO - Frame captured and saved as test_capture.jpg\n",
+      "2025-01-30 09:14:29,057 - INFO - prediction 1: plastic bag (728) -> 0.391\n",
+      "2025-01-30 09:14:29,058 - INFO - prediction 2: motor scooter (670) -> 0.021\n",
+      "2025-01-30 09:14:29,058 - INFO - prediction 3: snowmobile (802) -> 0.015\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "import torch\n",
@@ -111,18 +208,41 @@
     "import time\n",
     "logging.basicConfig(level=logging.INFO, format='%(asctime)s - %(levelname)s - %(message)s')\n",
     "\n",
+    "# Before recording, close pre-existing camera connections (Fixed frame capture bug)\n",
+    "pre_cap = cv2.VideoCapture(1)\n",
+    "pre_cap.release()\n",
+    "del pre_cap\n",
+    "\n",
+    "time.sleep(1)\n",
+    "\n",
     "try:\n",
     "    # Open camera and capture image\n",
-    "    cap = cv2.VideoCapture(0) # 0 is your computer's default camera\n",
+    "    cap = cv2.VideoCapture(1) # 0 is your computer's default camera\n",
+    "    # Configure auto exposure, brightness and contrast when you come to it.\n",
     "    logging.info(f\"Camera is opened: {cap.isOpened()}\")\n",
-    "    time.sleep(1)\n",
+    "    # Print camera properties to debug\n",
+    "    logging.info(f\"Frame Width: {cap.get(cv2.CAP_PROP_FRAME_WIDTH)}\")\n",
+    "    logging.info(f\"Frame Height: {cap.get(cv2.CAP_PROP_FRAME_HEIGHT)}\")\n",
+    "    logging.info(f\"FPS: {cap.get(cv2.CAP_PROP_FPS)}\")\n",
+    "    time.sleep(2)\n",
     "    if not cap.isOpened():\n",
     "         raise RuntimeError(\"Cannot open camera - check if camera is connected\")\n",
     "\n",
+    "    # Have multiple capture attempts\n",
+    "    for i in range(10):\n",
+    "        ret, frame = cap.read() # ret: bool, frame: np.ndarray (matrix of pixels)\n",
+    "        time.sleep(1)\n",
+    "        if ret:\n",
+    "            logging.info(f\"Frame captured: {ret} on attempt {i+1}\")\n",
+    "            logging.info(f\"Frame shape: {frame.shape if frame is not None else 'No frame'}\")\n",
+    "            # indicators whether frame is black\n",
+    "            logging.info(f\"Frame min value: {frame.min()}\")  # Should not be 0\n",
+    "            logging.info(f\"Frame max value: {frame.max()}\")  # Should not be 0\n",
+    "            logging.info(f\"Frame mean value: {frame.mean()}\")  # Should not be 0\n",
+    "            break\n",
+    "        else:\n",
+    "            logging.info(f\"Failed to capture frame on attempt {i+1}\")\n",
     "\n",
-    "    ret, frame = cap.read() # ret: bool, frame: np.ndarray (matrix of pixels)\n",
-    "    if not ret or frame is None:\n",
-    "        raise RuntimeError(\"Failed to capture frame from camera\")\n",
     "    # Look for 'test_capture.jpg' in the notebooks folder\n",
     "    cv2.imwrite(\"test_capture.jpg\", frame)\n",
     "    logging.info(\"Frame captured and saved as test_capture.jpg\")\n",
@@ -137,9 +257,26 @@
     "finally:\n",
     "    cap.release() # release camera resources after use\n",
     "\n",
+    "# MobileNetV2 uses ImageNet labels get via HTTP request\n",
+    "from urllib.request import urlopen\n",
+    "LABELS_URL = \"https://raw.githubusercontent.com/pytorch/hub/master/imagenet_classes.txt\"\n",
+    "labels = urlopen(LABELS_URL).read().decode('utf-8').splitlines()\n",
+    "\n",
     "with torch.no_grad():\n",
     "        output = model(input_tensor)\n",
-    "        class_id = torch.argmax(output).item()  # Get predicted class ID\n"
+    "        class_id = torch.argmax(output).item()  # Get predicted class ID\n",
+    "        probabilities = torch.nn.functional.softmax(output[0], dim=0)\n",
+    "        top3_prob, top3_catid = torch.topk(probabilities, 3)\n",
+    "        for i in range(3):\n",
+    "            # Interestingly detected objects on my face (glasses) instead of my face (with low confidence)\n",
+    "            logging.info(f\"prediction {i+1}: {labels[top3_catid[i]]} ({top3_catid[i]}) -> {top3_prob[i].item():.3f}\")\n",
+    "\n",
+    "        # Calculate prediction accuracy (%)\n",
+    "        true_label_id = 728 # Change to what it actually is\n",
+    "\n",
+    "        # Single prediction accuracy\n",
+    "        accuracy = top3_prob[true_label_id].item() * 100 if true_label_id in top3_catid else 0\n",
+    "        logging.info(f\"Prediction accuracy: {accuracy:.2f}%\")\n"
    ]
   },
   {
