--- a/notebooks/computer_vision.ipynb
+++ b/notebooks/computer_vision.ipynb
@@ -51,7 +51,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The Actual Code Functionality"
+    "# The Actual Code Functionality\n",
+    "\n",
+    "**ADVICE:** Follow the comments, not the code. ML libraries are highly abstracted, so I doubt you'd intuitively grasp the logic by reading the code."
    ]
   },
   {
@@ -265,18 +267,37 @@
     "with torch.no_grad():\n",
     "        output = model(input_tensor)\n",
     "        class_id = torch.argmax(output).item()  # Get predicted class ID\n",
-    "        probabilities = torch.nn.functional.softmax(output[0], dim=0)\n",
+    "\n",
+    "        # Softmax with numerator = e**(p-max(p)) for each p\n",
+    "        # softmax: list = [ numerator / sum(numerators) for each p ]\n",
+    "        # sum(softmax) = 1.0 so we can express confidence score as a % (0-100)\n",
+    "        probabilities = torch.nn.functional.softmax(output[0], dim=0) # normalises into array of positive probability values\n",
     "        top3_prob, top3_catid = torch.topk(probabilities, 3)\n",
     "        for i in range(3):\n",
     "            # Interestingly detected objects on my face (glasses) instead of my face (with low confidence)\n",
     "            logging.info(f\"prediction {i+1}: {labels[top3_catid[i]]} ({top3_catid[i]}) -> {top3_prob[i].item():.3f}\")\n",
     "\n",
     "        # Calculate prediction accuracy (%)\n",
-    "        true_label_id = 728 # Change to what it actually is\n",
+    "        true_label_id = 728 # Rigt now plastic bag but change to what it actually is\n",
     "\n",
-    "        # Single prediction accuracy\n",
+    "        # single prediction accuracy\n",
+    "        single_accuracy = 100 if true_label_id == top3_catid[0] else 0\n",
+    "        logging.info(f\"Single prediction accuracy: {single_accuracy:.2f}%\")\n",
+    "\n",
+    "        # top-3 prediction accuracy (not binary, has ranked score)\n",
+    "        top3_accuracy = 0\n",
+    "        # I guess ranking logic right now is p * (1/2)**(i-1)\n",
+    "        if true_label_id == top3_catid[0]:\n",
+    "            top3_accuracy = 100\n",
+    "        elif true_label_id == top3_catid[1]:\n",
+    "            top3_accuracy = 50\n",
+    "        elif true_label_id == top3_catid[2]:\n",
+    "            top3_accuracy = 25\n",
+    "        logging.info(f\"Top-3 prediction accuracy: {top3_accuracy:.2f}%\")\n",
+    "\n",
+    "        # confidence score\n",
     "        accuracy = top3_prob[true_label_id].item() * 100 if true_label_id in top3_catid else 0\n",
-    "        logging.info(f\"Prediction accuracy: {accuracy:.2f}%\")\n"
+    "        logging.info(f\"Confidence score: {accuracy:.2f}%\")\n"
    ]
   },
   {
