--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -29,7 +29,9 @@
     "dataset_dir = \"../data/dataset-resized\"\n",
     "\n",
     "# Load dataset\n",
-    "os.listdir(dataset_dir)"
+    "os.listdir(dataset_dir)\n",
+    "\n",
+    "# HI GUYS!"
    ]
   }
  ],
