load image -> attention output layer

--- a/ai/computer_vision.ipynb
+++ b/ai/computer_vision.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
@@ -13,27 +13,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: torch in ./.venv/lib/python3.12/site-packages (2.5.1)\n",
-      "Requirement already satisfied: torchvision in ./.venv/lib/python3.12/site-packages (0.20.1)\n",
-      "Requirement already satisfied: filelock in ./.venv/lib/python3.12/site-packages (from torch) (3.17.0)\n",
-      "Requirement already satisfied: typing-extensions>=4.8.0 in ./.venv/lib/python3.12/site-packages (from torch) (4.12.2)\n",
-      "Requirement already satisfied: networkx in ./.venv/lib/python3.12/site-packages (from torch) (3.4.2)\n",
-      "Requirement already satisfied: jinja2 in ./.venv/lib/python3.12/site-packages (from torch) (3.1.5)\n",
-      "Requirement already satisfied: fsspec in ./.venv/lib/python3.12/site-packages (from torch) (2024.12.0)\n",
-      "Requirement already satisfied: setuptools in ./.venv/lib/python3.12/site-packages (from torch) (75.8.0)\n",
-      "Requirement already satisfied: sympy==1.13.1 in ./.venv/lib/python3.12/site-packages (from torch) (1.13.1)\n",
-      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in ./.venv/lib/python3.12/site-packages (from sympy==1.13.1->torch) (1.3.0)\n",
-      "Requirement already satisfied: numpy in ./.venv/lib/python3.12/site-packages (from torchvision) (2.2.2)\n",
-      "Requirement already satisfied: pillow!=8.3.*,>=5.3.0 in ./.venv/lib/python3.12/site-packages (from torchvision) (11.1.0)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in ./.venv/lib/python3.12/site-packages (from jinja2->torch) (3.0.2)\n",
-      "Requirement already satisfied: pyserial in ./.venv/lib/python3.12/site-packages (3.5)\n",
-      "Collecting opencv-python\n",
-      "  Downloading opencv_python-4.11.0.86-cp37-abi3-macosx_13_0_arm64.whl.metadata (20 kB)\n",
-      "Requirement already satisfied: numpy>=1.21.2 in ./.venv/lib/python3.12/site-packages (from opencv-python) (2.2.2)\n",
-      "Downloading opencv_python-4.11.0.86-cp37-abi3-macosx_13_0_arm64.whl (37.3 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m37.3/37.3 MB\u001b[0m \u001b[31m11.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: opencv-python\n",
-      "Successfully installed opencv-python-4.11.0.86\n"
+      "Requirement already satisfied: torch in /Users/wanapichpongsa/Robot/nexus/.venv/lib/python3.12/site-packages (2.5.1)\n",
+      "Requirement already satisfied: torchvision in /Users/wanapichpongsa/Robot/nexus/.venv/lib/python3.12/site-packages (0.20.1)\n",
+      "Requirement already satisfied: filelock in /Users/wanapichpongsa/Robot/nexus/.venv/lib/python3.12/site-packages (from torch) (3.17.0)\n",
+      "Requirement already satisfied: typing-extensions>=4.8.0 in /Users/wanapichpongsa/Robot/nexus/.venv/lib/python3.12/site-packages (from torch) (4.12.2)\n",
+      "Requirement already satisfied: networkx in /Users/wanapichpongsa/Robot/nexus/.venv/lib/python3.12/site-packages (from torch) (3.4.2)\n",
+      "Requirement already satisfied: jinja2 in /Users/wanapichpongsa/Robot/nexus/.venv/lib/python3.12/site-packages (from torch) (3.1.5)\n",
+      "Requirement already satisfied: fsspec in /Users/wanapichpongsa/Robot/nexus/.venv/lib/python3.12/site-packages (from torch) (2024.12.0)\n",
+      "Requirement already satisfied: setuptools in /Users/wanapichpongsa/Robot/nexus/.venv/lib/python3.12/site-packages (from torch) (75.8.0)\n",
+      "Requirement already satisfied: sympy==1.13.1 in /Users/wanapichpongsa/Robot/nexus/.venv/lib/python3.12/site-packages (from torch) (1.13.1)\n",
+      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /Users/wanapichpongsa/Robot/nexus/.venv/lib/python3.12/site-packages (from sympy==1.13.1->torch) (1.3.0)\n",
+      "Requirement already satisfied: numpy in /Users/wanapichpongsa/Robot/nexus/.venv/lib/python3.12/site-packages (from torchvision) (2.2.2)\n",
+      "Requirement already satisfied: pillow!=8.3.*,>=5.3.0 in /Users/wanapichpongsa/Robot/nexus/.venv/lib/python3.12/site-packages (from torchvision) (11.1.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in /Users/wanapichpongsa/Robot/nexus/.venv/lib/python3.12/site-packages (from jinja2->torch) (3.0.2)\n",
+      "Requirement already satisfied: numpy in /Users/wanapichpongsa/Robot/nexus/.venv/lib/python3.12/site-packages (2.2.2)\n",
+      "Requirement already satisfied: pyserial in /Users/wanapichpongsa/Robot/nexus/.venv/lib/python3.12/site-packages (3.5)\n",
+      "Requirement already satisfied: opencv-python in /Users/wanapichpongsa/Robot/nexus/.venv/lib/python3.12/site-packages (4.11.0.86)\n",
+      "Requirement already satisfied: numpy>=1.21.2 in /Users/wanapichpongsa/Robot/nexus/.venv/lib/python3.12/site-packages (from opencv-python) (2.2.2)\n"
      ]
     }
    ],
@@ -162,26 +158,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-01-30 09:14:25,749 - INFO - Camera is opened: True\n",
-      "2025-01-30 09:14:25,750 - INFO - Frame Width: 1920.0\n",
-      "2025-01-30 09:14:25,751 - INFO - Frame Height: 1080.0\n",
-      "2025-01-30 09:14:25,751 - INFO - FPS: 15.0\n",
-      "2025-01-30 09:14:28,784 - INFO - Frame captured: True on attempt 1\n",
-      "2025-01-30 09:14:28,785 - INFO - Frame shape: (1080, 1920, 3)\n",
-      "2025-01-30 09:14:28,788 - INFO - Frame min value: 0\n",
-      "2025-01-30 09:14:28,789 - INFO - Frame max value: 255\n",
-      "2025-01-30 09:14:28,796 - INFO - Frame mean value: 115.30855725951646\n",
-      "2025-01-30 09:14:28,808 - INFO - Frame captured and saved as test_capture.jpg\n",
-      "2025-01-30 09:14:29,057 - INFO - prediction 1: plastic bag (728) -> 0.391\n",
-      "2025-01-30 09:14:29,058 - INFO - prediction 2: motor scooter (670) -> 0.021\n",
-      "2025-01-30 09:14:29,058 - INFO - prediction 3: snowmobile (802) -> 0.015\n"
+      "2025-02-02 17:29:14.619 Python[63168:1341616] WARNING: AVCaptureDeviceTypeExternal is deprecated for Continuity Cameras. Please use AVCaptureDeviceTypeContinuityCamera and add NSCameraUseContinuityCameraDeviceType to your Info.plist.\n",
+      "2025-02-02 17:29:16,103 - INFO - Camera is opened: True\n",
+      "2025-02-02 17:29:16,104 - INFO - Frame Width: 1920.0\n",
+      "2025-02-02 17:29:16,104 - INFO - Frame Height: 1080.0\n",
+      "2025-02-02 17:29:16,104 - INFO - FPS: 30.0\n",
+      "2025-02-02 17:29:19,138 - INFO - Frame captured: True on attempt 1\n",
+      "2025-02-02 17:29:19,139 - INFO - Frame shape: (1080, 1920, 3)\n",
+      "2025-02-02 17:29:19,140 - INFO - Frame min value: 0\n",
+      "2025-02-02 17:29:19,140 - INFO - Frame max value: 255\n",
+      "2025-02-02 17:29:19,146 - INFO - Frame mean value: 108.60609021347737\n",
+      "2025-02-02 17:29:19,155 - INFO - Frame captured and saved as test_capture.jpg\n",
+      "2025-02-02 17:29:19,495 - INFO - prediction 1: sunscreen (838) -> 0.094\n",
+      "2025-02-02 17:29:19,496 - INFO - prediction 2: lotion (631) -> 0.055\n",
+      "2025-02-02 17:29:19,496 - INFO - prediction 3: toaster (859) -> 0.041\n",
+      "2025-02-02 17:29:19,497 - INFO - Single prediction accuracy: 0.00%\n",
+      "2025-02-02 17:29:19,497 - INFO - Top-3 prediction accuracy: 0.00%\n",
+      "2025-02-02 17:29:19,498 - INFO - Confidence score: 0.00%\n"
      ]
     }
    ],
@@ -293,11 +293,21 @@
     "            top3_accuracy = 50\n",
     "        elif true_label_id == top3_catid[2]:\n",
     "            top3_accuracy = 25\n",
+    "        else:\n",
+    "            top3_accuracy = 0\n",
     "        logging.info(f\"Top-3 prediction accuracy: {top3_accuracy:.2f}%\")\n",
     "\n",
     "        # confidence score\n",
     "        accuracy = top3_prob[true_label_id].item() * 100 if true_label_id in top3_catid else 0\n",
-    "        logging.info(f\"Confidence score: {accuracy:.2f}%\")\n"
+    "        logging.info(f\"Confidence score: {accuracy:.2f}%\")\n",
+    "\n",
+    "# Output string to txt file\n",
+    "import os\n",
+    "\n",
+    "# Create a new file\n",
+    "with open('output.txt', 'w') as file:\n",
+    "    file.write('Hello, world!') # write output :)\n",
+    "\n"
    ]
   },
   {
@@ -306,27 +316,7 @@
    "source": [
     "### Draft Code for Serial Communication with Arduino\n",
     "\n",
-    "```python\n",
-    "import serial\n",
-    "\n",
-    "# Initialize serial communication\n",
-    "arduino = serial.Serial('COM3', 9600)  # Adjust port and baud rate\n",
-    "\n",
-    "# Capture image\n",
-    "cap = cv2.VideoCapture(0)\n",
-    "ret, frame = cap.read()\n",
-    "\n",
-    "# Preprocess and classify\n",
-    "input_tensor = preprocess(frame).unsqueeze(0)  # Add batch dimension\n",
-    "with torch.no_grad():\n",
-    "    output = model(input_tensor)\n",
-    "class_id = torch.argmax(output).item()  # Get predicted class ID\n",
-    "\n",
-    "# Send signal to Arduino\n",
-    "arduino.write(str(class_id).encode())\n",
-    "\n",
-    "cap.release()\n",
-    "```"
+    "Output string to txt, cpp code reads txt"
    ]
   }
  ],
