YOLO dataset translation step 1

--- a/ai/train.ipynb
+++ b/ai/train.ipynb
@@ -92,6 +92,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I forgot that dataset that I got is already resized -> check which model it was for"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
